testdata/parser/negative/23.txt
Parse error at 23.pdl:13:7: Unresolved label
	goto unreach;
	     ^
